tweaked UI values back

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ main {
     flex-flow: row wrap;
 }
 .history__container {
-    flex: 1 1 25%;
+    flex: 1 1 50%;
     display: flex;
     flex-direction: column;
     max-height: 100vh;
@@ -54,6 +54,8 @@ main {
     margin-top: 1em;
     flex: 1 1 75%;
     text-align: center;
+    font-size: 125%;
+    line-height: 125%;
 }
 .calculator__container > .calculator__input__container > .input__result {
     flex: 1 1 25%
@@ -66,20 +68,21 @@ main {
     flex-direction: column;
 } 
 .calculator__container > .calculator__numbers > .button {
+    
+    margin: .5em;
     flex: 1 0 25%;
-    padding-bottom: 4em;
-    padding-top: 2em;
-    font-size: 200%;
-    line-height: 250%;
-    margin: 0.5em;
+    padding-bottom: 3em;
+    padding-top: 1em;
+    font-size: 150%;
+    line-height: 200%;
 }
 .calculator__container > .calculator__controls > .button {
     margin: .5em;
     margin-left: 2em;
     margin-right: 2em;
     flex: 1 0 auto;
-    padding-bottom: 1em;
-    padding-top: 1em;
+    padding-bottom: 2em;
+    padding-top: 0em;
     font-size: 200%;
     line-height: 200%;
 }
